Fixed letter align

--- a/src/style.css
+++ b/src/style.css
@@ -65,9 +65,6 @@ body {
   margin-right: -30px;
 }
 
-.letter {
-}
-
 .contacts {
   position: absolute;
   display: flex;
